DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number</label>
    <type>Text</type>
    <length>60</length>
</CustomField>