DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course / Program</label>
    <type>Text</type>
    <length>255</length>
</CustomField>