DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Credential_Level__c.field-meta.xml
<CustomField>
    <fullName>Credential_Level__c</fullName>
    <label>Credential Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>