DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Contact Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>