DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>