DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Certificate__c/fields/Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Verification_URL__c</fullName>
    <label>Verification URL</label>
    <type>Url</type>
</CustomField>